Replaced dependencies with peerDependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@telenko/portal-tooltip",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Easy component, which allows to bind React contents as tooltip to a native DOM element",
   "main": "src/PortalTooltip.js",
   "scripts": {
@@ -22,9 +22,9 @@
     "url": "https://github.com/telenko/portal-tooltip/issues"
   },
   "homepage": "https://github.com/telenko/portal-tooltip#readme",
-  "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+  "peerDependencies": {
+    "react": "*",
+    "react-dom": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
@@ -32,6 +32,8 @@
     "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-links": "^6.1.21",
     "@storybook/react": "^6.1.21",
-    "babel-loader": "^8.2.2"
+    "babel-loader": "^8.2.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
